--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "faker": "^5.5.3",
+    "mongoose": "^8.5.3",
+    "morgan": "^1.10.0"
   }
 }
